--- a/jswork/htmlwork/day0205/cssClass_08.html
+++ b/jswork/htmlwork/day0205/cssClass_08.html
@@ -15,11 +15,13 @@
         p.txt2{
             background-color: blanchedalmond;
             padding: 10px 20px 30px 40px;
-            /* padding 상 우 하 좌 */
+            /* padding: 내부 여백, 상 우 하 좌 */
         }
         p.txt3{
             background-color: cadetblue;
+            /* margin: 외부 여백 */
             margin: 50px;
+            /* align: 텍스트 정렬 */
             text-align: center;
         }
     </style>
