--- a/jswork/htmlwork/day0205/cssClass_09.html
+++ b/jswork/htmlwork/day0205/cssClass_09.html
@@ -20,18 +20,20 @@
             height: 150px;
             border: 10px groove gray;
             margin-left: 200px; /*태그 밖 왼쪽 여백*/
-            border-radius: 100px;
+            border-radius: 100px; /*테두리 둥글게*/
         }
         img.imgb{
             width: 200px;
             height: 200px;
-            box-shadow: 5px 5px 5px gray;
+            box-shadow: 5px 5px 5px gray; /*그림자 설정, 가로, 세로, 흐림정도, 확장정도 순서*/
             border-radius: 30px; /*모서리 둥글게*/
         }
     </style>
 </head>
 <body>
     <font size="5" color="red">Font Tag!!!</font><br>
+    <!-- span: div와 비슷, 텍스트나 구문을 꾸밀 때 사용, css와 같이 사용-->
+    <!-- div: 문서 분할, 레이아웃 나눔 -->
     <span style="color: magenta; font-size: 2em;">SpanTag!!!</span><br>
     <span style="border: 3px solid green;">안녕하세요</span>
     <div class="happy nice">
