--- a/jswork/htmlwork/day0205/tagTest_02.html
+++ b/jswork/htmlwork/day0205/tagTest_02.html
@@ -17,20 +17,19 @@
         중입니다
     </pre>
 
-    <!-- 선, 닫지 않아도 됨, 색상 6자리 앞에 # 붙히기, width 값은 가운데설정,
+    <!-- hr: 선 생성, 닫지 않아도 됨 / 색상 6자리 앞에 # 붙히기, width 값은 길이,
         size 굵기, align 왼쪽 오른쪽 -->
     <hr>
     <hr color="#ffa500" width="500" size="5" align="left">
     <hr color="#c0c0c0" width="1000" size="10" align="right">
     
-    <!-- 단락처리  p 태그, 위아래 줄 띄어줌 -->
+    <!-- p 태그: 단락처리, 위아래 줄 띄어줌 -->
     <p>안녕하세요 오늘부터 html 1일입니다</p>
-
     디자인의 속성에 대하여 배울것이고<br>
     그리고 테이블이나 이미지 삽입도 배웁니다<br>
 
     <br>
-    <!-- font 속성 글꼴을 바꾸고자 할때는 face속성-->
+    <!-- font 속성: 글꼴을 바꾸고자 할때는 face속성-->
     <font size="5" color="red" face="Impact">Have a nice Day</font><br>
     <font size="5" color="red" face="Comic Sans MS">Have a nice Day</font><br>
 
@@ -40,20 +39,22 @@
     <!-- em : 배로 늘린다는 의미 -->
     <b style="font-size: 2em; background-color: #ffccff;">오늘은 태그연습 하는날</b><br>
 
-    <!-- 취소선 -->
+    <!-- strike: 취소선(삭선) -->
     <strike>가격이 5000 원</strike><br>
 
     X<sub>3</sub>+Y<sub>2</sub><br>
 
+    <!-- 글씨 크기 -->
     <big>The Bigman</big><br>
     <small>The Small</small><br>
 
-    <!-- p태그 이용해서 기사 -->
+    <!-- p태그 이용해서 기사 작성 -->
     <p>일본 경쟁당국의 기업결합 승인과 함께 대한항공과 아시아나항공의 합병이 9부 능선에 올랐다.</p>
 
     4일 업계에 따르면, 대한항공은 기업결합을 신고한 전체 14개국 가운데 EU, 미국을 제외한 12개국으로부터 최종 승인을 받았다<br>
 
-    <!-- 이미지 가져오기  .은 동일폴더 ..은 상위폴더    ./ 생략가능-->
+    <!-- img: 이미지 가져오기,  .은 동일폴더 ..은 상위폴더  ./ 생략가능,
+         alt: 이미지가 나오지 않으면 나타나는 이름-->
     <img src="../image/jquery_img/01.png" alt="이미지1">
     
 </body>
