--- a/jswork/htmlwork/day0205/list_05.html
+++ b/jswork/htmlwork/day0205/list_05.html
@@ -11,6 +11,7 @@
     </style>
 </head>
 <body>
+    <!-- ol: 순서가 있는 리스트를 정의 -->
     <ol>
         <h2>순서 있는 리스트(OrderList)</h2>
         <li>미국</li>
@@ -65,7 +66,7 @@
         <li>일본</li>
     </ol>
 
-    <!-- 순서 없는 리스트 -->
+    <!-- ul: 순서 없는 리스트 -->
     <ul>
         <h2>순서 없는 리스트(Unorder list)</h2>
         <li>미국</li>   
