--- a/jswork/htmlwork/day0206/idCss_10.html
+++ b/jswork/htmlwork/day0206/idCss_10.html
@@ -43,8 +43,8 @@
 
 </head>
 <body>
-    <img src="../image/쇼핑몰사진/쇼핑몰사진/14.jpg" alt="이미지 없음1" title="단화들" id="myimg1">
-    <img src="../image/연예인사진/연예인사진/9.jpg" alt="이미지 없음1" title="강동원" id="myimg2">
+    <img src="../image/쇼핑몰사진/14.jpg" alt="이미지 없음1" title="단화들" id="myimg1">
+    <img src="../image/연예인사진/9.jpg" alt="이미지 없음1" title="강동원" id="myimg2">
     <img src="../image/logoImg/toy03.png" alt="이미지 없음1" title="토이스토리" id="myimg3">
     <div id="myimg4"></div>
 </body>
