--- a/jswork/htmlwork/day0206/cssLink_04.html
+++ b/jswork/htmlwork/day0206/cssLink_04.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- 외부 폴더의 css 불러오기 -->
+    <!-- 외부 폴더의 css 불러오기 (hyper reference)-->
     <link href="../css/mylotto.css" rel="stylesheet">
     <style>
         div{
@@ -25,8 +25,8 @@
     <h3>이미지 속성</h3>
     <img src="../image/만화이미지/01.png" alt="이미지 없음">
     <img src="../image/logoImg/toy06.png" width="200" border="1">
-    <!-- /*속성명으로 width를 줄 때 단위 생략 -->
-    <img src="../image/연예인사진/연예인사진/18.jpg" width="200" title="신세경입니다">
+    <!-- 속성명으로 width를 줄 때 단위 생략 -->
+    <img src="../image/연예인사진/12.jpg" width="200" title="신세경입니다">
     <br>
     <img src="../image/html_img/nut_img4.jpg" width="200" height="200"
     style="border: 5px dotted pink; border-radius: 100px;">
