--- a/jswork/htmlwork/day0206/idClass_06.html
+++ b/jswork/htmlwork/day0206/idClass_06.html
@@ -22,7 +22,7 @@
         }
 
         #sist{
-            position: absolute;
+            position: relative;
             top: 400px;
             left: 200px;
             width: 200px;
@@ -52,5 +52,8 @@
     <b class="aaa">Bold Test</b>
     <b class="bbb">Bold Test</b>
     <div id="sist">쌍용교육4강의장</div>
+    <p id="sist">쌍용교육5강의장</p>
+    <p id="sist">쌍용교육6강의장</p>
+
 </body>
 </html>
