--- a/jswork/jsjquerywork/day0208/innerHTML_15.html
+++ b/jswork/jsjquerywork/day0208/innerHTML_15.html
@@ -13,10 +13,10 @@
             list+='<li>JavaScript</li>';
             list+='</ul>';
             
-            // document.write(list);
+            document.write(list);
             // document.body.innerHTML=list; //html 문서의 body 태그에 넣겠다
             // document.getElementById("out").innerHTML=list;
-            out.innerHTML=list;
+            // out.innerHTML=list;
         }
     </script>
 </head>
