--- a/jswork/jsjquerywork/day0213/windowOpen_03.html
+++ b/jswork/jsjquerywork/day0213/windowOpen_03.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- window.open()  : 새로운 브라우저 창 열기(모달창)
-         var 객체변수명=window.open("url", "name(빈문자열 가능)", "space")
+         var 객체변수명=window.open("url", "name(빈문자열 가능)", "space(크기)")
     -->
 
     <!-- window.setTimeout(function(){}, 밀리초) -->
