--- a/jswork/jsjquerywork/day0214/imgClickEvent_07.html
+++ b/jswork/jsjquerywork/day0214/imgClickEvent_07.html
@@ -32,7 +32,7 @@
     </style>
 
     <script>
-        window.onload = function () {
+        // window.onload = function () {
             //     //id로 객체 읽어오기
             //     img1=document.getElementById("img1");
 
@@ -70,7 +70,7 @@
             //         document.getElementById("img_result").setAttribute("src", img7.getAttribute("src"));
             //     }
             // }
-
+        window.onload = function () {
             var imgs = [document.getElementById("img1"),
                         document.getElementById("img2"),
                         document.getElementById("img3"),
