--- a/jswork/jsjquerywork/day0214/onClickEvent_08.html
+++ b/jswork/jsjquerywork/day0214/onClickEvent_08.html
@@ -42,7 +42,7 @@
     <hr>
     <img src="../image/logoImg/toy02.png" id="myimg2">
     <hr>
-    <input type="button" value="변경1" id="btn1" class="btn btn-blue">
+    <input type="button" value="변경1" id="btn1" class="btn btn-orange">
     <input type="button" value="변경2" id="btn2" class="btn btn-green">
     <input type="button" value="원래대로" id="btn3" class="btn btn-pink">
 </body>
