--- a/jswork/jsjquerywork/day0215/styleAttr_06.html
+++ b/jswork/jsjquerywork/day0215/styleAttr_06.html
@@ -26,7 +26,7 @@
             //10보다 작아지면 더이상 못줄임, 이후 종료
             //60보다 커지면 더이상 못키임, 이후 종료
             //버튼 증감시 fsize에 현재 폰트크기 나오도록
-            document.getElementById("fsize").innerHTML = "현재 글꼴 크기는 40px 입니다"
+            document.getElementById("fsize").innerHTML = "현재 글꼴 크기는 30px 입니다"
 
             //작게 버튼
             document.getElementById("btn1").onclick = function () {
@@ -96,7 +96,7 @@
     <select id="selwidth">
         <!-- value가 있을 경우 value가 우선, 없을 때는 option값 -->
         <option value="0">없음</option>
-        <option>1</option>S
+        <option>1</option>
         <option>3</option>
         <option>5</option>
         <option>7</option>
