--- a/jswork/jsjquerywork/day0216/setTimeoutinterval_05.html
+++ b/jswork/jsjquerywork/day0216/setTimeoutinterval_05.html
@@ -64,7 +64,7 @@
         function writeTime(){
             var date=new Date();
             var h=date.getHours();
-            var m=date.getMinutes();
+            var m=dates.getMinutes();
             var s=date.getSeconds();
 
             var time=h+":"+(m<10?0:"")+m+":"+(s<10?0:"")+s;
