--- a/jswork/jsjquerywork/jquery_0220/randomAttrEvent_11.html
+++ b/jswork/jsjquerywork/jquery_0220/randomAttrEvent_11.html
@@ -25,11 +25,11 @@
             "cursor":"pointer"
         })
 
-        $("span").css("font-size","20pt");
+        $("span").css("font-size","20pt");d
 
         // alert($("div").length);
 
-        for(var i=0;i<$("div").length;i++){
+        for(var i=0;i<$("div").length;i++){ 
             //rgb 색상 얻기
             var r=parseInt(Math.random()*256);
             var g=parseInt(Math.random()*256);
@@ -46,4 +46,4 @@
 
     </script>
 </body>
-</html>
+</html> 
