--- a/jspwork/JpsProject/src/main/webapp/ajaxQuiz/readquiz.html
+++ b/jspwork/JpsProject/src/main/webapp/ajaxQuiz/readquiz.html
@@ -52,7 +52,7 @@
 						s+="<div class='alert alert-success' style='width:300px'>";
 						s+="index: "+i+"<br>";
 						s+="음식 번호: "+ele.num+"<br>";
-						s+="<img src='"+ele.foodphoto+"' width='100'>";
+						s+="<img src='"+ele.foodphoto+"' width='100'><br>";
 						s+="음식 이름: "+ele.foodname+"<br>";
 						s+="음식 가격: "+ele.price+"<br>";
 						s+="음식 갯수: "+ele.cnt+"<br>";
