--- a/jspwork/JpsProject/src/main/webapp/ajax0304/readData1.html
+++ b/jspwork/JpsProject/src/main/webapp/ajax0304/readData1.html
@@ -10,10 +10,8 @@
 <body>
 	<img alt="" src="../image/jquery_img/05.png">
 	<br>
-	<button type="button" class="btn btn-info"
-	id="btn1">data1.xml</button>
-	<button type="button" class="btn btn-success"
-	id="btn2">data1.json</button>
+	<button type="button" class="btn btn-info" id="btn1">data1.xml</button>
+	<button type="button" class="btn btn-success" id="btn2">data1.json</button>
 	<br><br>
 	<div id="result">파일들 출력..</div>
 	
